kubernetes-istio-scripts/kubernetes/istio-09-traffic-routing/devops-istio-routing-1.0.0.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  devops
  labels:
    istio-injection: enabled

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: istio-routing-deployment-blue
spec:
  selector:
    matchLabels:
      app: istio-routing-blue
  template:
    metadata:
      labels:
        app: istio-routing-blue
        version: 1.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8111"
        prometheus.io/path: /devops/blue/actuator/prometheus
        sidecar.opentelemetry.io/inject: "otel-sidecar"
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
      - name: devops-blue
        image: timpamungkas/devops-blue:1.0.0
        resources:
          requests:
            cpu: "0.02"
            memory: 32Mi
          limits:
            cpu: "0.3"
            memory: 384Mi
        ports:
        - name:  http
          containerPort: 8111
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/blue/actuator/health/readiness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/blue/actuator/health/liveness
            port: 8111
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: istio-routing-deployment-yellow
spec:
  selector:
    matchLabels:
      app: istio-routing-yellow
  template:
    metadata:
      labels:
        app: istio-routing-yellow
        version: 1.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8112"
        prometheus.io/path: /devops/yellow/actuator/prometheus
        sidecar.opentelemetry.io/inject: "otel-sidecar"
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
      - name: devops-yellow
        image: timpamungkas/devops-yellow:1.0.0
        resources:
          requests:
            cpu: "0.02"
            memory: 32Mi
          limits:
            cpu: "0.3"
            memory: 384Mi
        ports:
        - name:  http
          containerPort: 8112
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/yellow/actuator/health/readiness
            port: 8112
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/yellow/actuator/health/liveness
            port: 8112
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: istio-routing-deployment-white
spec:
  selector:
    matchLabels:
      app: istio-routing-white
  template:
    metadata:
      labels:
        app: istio-routing-white
        version: 1.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8113"
        prometheus.io/path: /devops/white/actuator/prometheus
        sidecar.opentelemetry.io/inject: "otel-sidecar"
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
      - name: devops-white
        image: timpamungkas/devops-white:1.0.0
        resources:
          requests:
            cpu: "0.02"
            memory: 32Mi
          limits:
            cpu: "0.3"
            memory: 384Mi
        ports:
        - name:  http
          containerPort: 8113
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /devops/white/actuator/health/readiness
            port: 8113
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /devops/white/actuator/health/liveness
            port: 8113
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 5
  replicas: 1
