kubernetes-istio-scripts/kubernetes/istio-09-traffic-routing/devops-istio-routing-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-blue-clusterip
  labels:
    app: istio-routing-blue
spec:
  selector:
    app: istio-routing-blue
  ports:
  - port: 8111
    name: http

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-yellow-clusterip
  labels:
    app: istio-routing-yellow
spec:
  selector:
    app: istio-routing-yellow
  ports:
  - port: 8112
    name: http

---

apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: devops-white-clusterip
  labels:
    # route to any white, so don't use version
    app: istio-routing-white
spec:
  selector:
    app: istio-routing-white
  ports:
  - port: 8113
    name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devops
  name: ingress-istio-routing-nginx-blue
  labels:
    app.kubernetes.io/name: ingress-istio-routing-nginx-blue
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /devops/blue
        pathType: Prefix
        backend:
          service:
            name: devops-blue-clusterip
            port:
              number: 8111
